--- a/DDS_Space_Invaders/DDS_Space_Invaders.csproj
+++ b/DDS_Space_Invaders/DDS_Space_Invaders.csproj
@@ -47,19 +47,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direction.cs" />
-    <Compile Include="Estrategias\EstrategiaDispara3.cs" />
-    <Compile Include="Estrategias\EstrategiaMuere.cs" />
-    <Compile Include="Estrategias\EstrategiaDispara5.cs" />
-    <Compile Include="Factory\BugFour.cs" />
-    <Compile Include="Factory\BugFourEnemy.cs" />
-    <Compile Include="Factory\BugOne.cs" />
-    <Compile Include="Factory\BugOneEnemy.cs" />
-    <Compile Include="Factory\BugThree.cs" />
-    <Compile Include="Factory\BugThreeEnemy.cs" />
-    <Compile Include="Factory\BugTwo.cs" />
-    <Compile Include="Factory\BugTwoEnemy.cs" />
-    <Compile Include="Factory\Enemy.cs" />
-    <Compile Include="Factory\Invader.cs" />
+    <Compile Include="Patterns\Factory Method\Creator\ConcreteCreatorTwo.cs" />
+    <Compile Include="Patterns\Factory Method\ProductEnemy\ConcreteProductTwo.cs" />
+    <Compile Include="Patterns\Strategy\EstrategiaDispara3.cs" />
+    <Compile Include="Patterns\Strategy\EstrategiaMuere.cs" />
+    <Compile Include="Patterns\Strategy\EstrategiaDispara5.cs" />
+    <Compile Include="Patterns\Factory Method\ProductEnemy\ConcreteProductOne.cs" />
+    <Compile Include="Patterns\Factory Method\Creator\ConcreteCreatorOne.cs" />
+    <Compile Include="Patterns\Factory Method\Creator\Creator.cs" />
+    <Compile Include="Patterns\Factory Method\ProductEnemy\Product.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,12 +63,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Game.cs" />
-    <Compile Include="Estrategias\IEstrategia.cs" />
+    <Compile Include="Patterns\Strategy\IEstrategia.cs" />
     <Compile Include="Invader.cs" />
-    <Compile Include="PlayerShip.cs" />
+    <Compile Include="Patterns\Singleton\PlayerShip.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Estrategias\EstrategiaDispara4.cs" />
+    <Compile Include="Patterns\Strategy\EstrategiaDispara4.cs" />
     <Compile Include="ShipType.cs" />
     <Compile Include="Shot.cs" />
     <Compile Include="Star.cs" />
