--- a/DDS_Space_Invaders/DDS_Space_Invaders.csproj
+++ b/DDS_Space_Invaders/DDS_Space_Invaders.csproj
@@ -47,16 +47,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direction.cs" />
-    <Compile Include="Nivel.cs" />
-    <Compile Include="Patterns\Factory Method\Enemies\Saucer.cs" />
-    <Compile Include="Patterns\Factory Method\Enemies\Satellite.cs" />
-    <Compile Include="Patterns\Factory Method\Enemies\Spaceship.cs" />
-    <Compile Include="Patterns\Factory Method\Enemies\Star.cs" />
-    <Compile Include="Patterns\Strategy\EstrategiaDispara3.cs" />
-    <Compile Include="Patterns\Strategy\EstrategiaMuere.cs" />
-    <Compile Include="Patterns\Strategy\EstrategiaDispara5.cs" />
-    <Compile Include="Patterns\Factory Method\Enemies\Bug.cs" />
-    <Compile Include="Patterns\Factory Method\Creator\Invader.cs" />
+    <Compile Include="Patterns\Non Gamma patterns\Null Object\Nivel.cs" />
+    <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Saucer.cs" />
+    <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Satellite.cs" />
+    <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Spaceship.cs" />
+    <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Star.cs" />
+    <Compile Include="Patterns\Gamma patterns\Strategy\EstrategiaDispara3.cs" />
+    <Compile Include="Patterns\Gamma patterns\Strategy\EstrategiaMuere.cs" />
+    <Compile Include="Patterns\Gamma patterns\Strategy\EstrategiaDispara5.cs" />
+    <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Bug.cs" />
+    <Compile Include="Patterns\Gamma patterns\Factory Method\Creator\Invader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,11 +64,13 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Game.cs" />
-    <Compile Include="Patterns\Strategy\IEstrategia.cs" />
-    <Compile Include="Patterns\Singleton\PlayerShip.cs" />
+    <Compile Include="Patterns\Gamma patterns\Strategy\IEstrategia.cs" />
+    <Compile Include="Patterns\Gamma patterns\Singleton\PlayerShip.cs" />
+    <Compile Include="Patterns\Non Gamma patterns\Null Object\Levels.cs" />
+    <Compile Include="Patterns\Non Gamma patterns\Null Object\NullLevel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Patterns\Strategy\EstrategiaDispara4.cs" />
+    <Compile Include="Patterns\Gamma patterns\Strategy\EstrategiaDispara4.cs" />
     <Compile Include="ShipType.cs" />
     <Compile Include="Shot.cs" />
     <Compile Include="Star.cs" />
