--- a/DDS_Space_Invaders/DDS_Space_Invaders.csproj
+++ b/DDS_Space_Invaders/DDS_Space_Invaders.csproj
@@ -46,7 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Direction.cs" />
+    <Compile Include="GameComponents\Direction.cs" />
+    <Compile Include="IGame.cs" />
     <Compile Include="Patterns\Non Gamma patterns\Null Object\Level.cs" />
     <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Saucer.cs" />
     <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Satellite.cs" />
@@ -71,10 +72,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Patterns\Gamma patterns\Strategy\EstrategiaDispara4.cs" />
-    <Compile Include="ShipType.cs" />
-    <Compile Include="Shot.cs" />
-    <Compile Include="Star.cs" />
-    <Compile Include="Stars.cs" />
+    <Compile Include="GameComponents\ShipType.cs" />
+    <Compile Include="GameComponents\Shot.cs" />
+    <Compile Include="GameComponents\Star.cs" />
+    <Compile Include="GameComponents\Stars.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
