--- a/DDS_Space_Invaders/DDS_Space_Invaders.csproj
+++ b/DDS_Space_Invaders/DDS_Space_Invaders.csproj
@@ -48,11 +48,13 @@
   <ItemGroup>
     <Compile Include="GameComponents\Direction.cs" />
     <Compile Include="IGame.cs" />
+    <Compile Include="Patterns\Gamma patterns\Decorator\ColorDecorator.cs" />
     <Compile Include="Patterns\Gamma patterns\Facade\StarTypes\BlueStar.cs" />
     <Compile Include="Patterns\Gamma patterns\Facade\IShape.cs" />
     <Compile Include="Patterns\Gamma patterns\Facade\StarMaker.cs" />
     <Compile Include="Patterns\Gamma patterns\Facade\StarTypes\WhiteStar.cs" />
     <Compile Include="Patterns\Gamma patterns\Facade\StarTypes\YellowStar.cs" />
+    <Compile Include="Patterns\Gamma patterns\Strategy\Contexto.cs" />
     <Compile Include="Patterns\Non Gamma patterns\Null Object\Level.cs" />
     <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Saucer.cs" />
     <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Satellite.cs" />
@@ -63,11 +65,11 @@
     <Compile Include="Patterns\Gamma patterns\Strategy\EstrategiaDispara5.cs" />
     <Compile Include="Patterns\Gamma patterns\Factory Method\Enemies\Bug.cs" />
     <Compile Include="Patterns\Gamma patterns\Factory Method\Creator\Invader.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormGame.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormGame.Designer.cs">
+      <DependentUpon>FormGame.cs</DependentUpon>
     </Compile>
     <Compile Include="Game.cs" />
     <Compile Include="Patterns\Gamma patterns\Strategy\IEstrategia.cs" />
@@ -81,8 +83,8 @@
     <Compile Include="GameComponents\Shot.cs" />
     <Compile Include="Patterns\Gamma patterns\Facade\ShapeStar.cs" />
     <Compile Include="Patterns\Gamma patterns\Facade\Star.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormGame.resx">
+      <DependentUpon>FormGame.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
